k8s-default-healthcheck-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-default-healthcheck-ingress
  namespace: healthcheck
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /default-healthcheck-one(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: k8s-service-default-healthcheck-one
            port:
              number: 80
